--- a/static/html/create.html
+++ b/static/html/create.html
@@ -1,9 +1,11 @@
 <form class="form-horizontal create-track" role="form">
+
     <div class="clearfix form-save-buttons">
         <h2 class="col-xs-11">Додати відстеження</h2>
         <!--<div class="col-xs-2"><button type="submit" class="btn btn-primary pull-left">Зберегти чорновик</button></div>-->
         <div class="col-xs-1"><button type="submit" class="btn btn-primary pull-left" ng-click="addTrack()">Додати</button></div>
     </div>
+    <h3 class="col-xs-12 track-header">Основна інформація</h3>
     <div class="col-xs-12 clearfix">
         <div class="panel panel-default">
             <div class=" panel-heading">Назва та реквізити регуляторного акта</div>
@@ -16,16 +18,18 @@
             <div class="col-xs-8 panel-heading">Реквізити реєстрації регуляторного акта в Мінюсті</div>
             <div class="col-xs-4 panel-heading">&nbsp;</div>
             <div class="clearfix">
-                <div class="col-xs-2 pull-left panel-body">Дата реєстрації</div>
-                <div class="col-xs-2 pull-left panel-body">
-                    <input class="form-control" ng-model="reg_date" type="date" ng-change="fdata.reg_date = dateConvert(reg_date)"
+                <div class="col-xs-2 pull-left panel-body high"><span>Дата реєстрації</span></div>
+                <div class="col-xs-2 pull-left panel-body high">
+                    <input class="form-control" ng-model="fdata.reg_date" type="date"
+                           ng-change="fdata.reg_date = dateConvert(fdata.reg_date)"
                            placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31" required></div>
-                <div class="col-xs-2 pull-left panel-body">Номер реєстрації</div>
-                <div class="col-xs-2 pull-left panel-body">
+                <div class="col-xs-2 pull-left panel-body high"><span>Номер реєстрації</span></div>
+                <div class="col-xs-2 pull-left panel-body high">
                     <input class="form-control" ng-model="fdata.reg_number" required></div>
-                <div class="col-xs-2 pull-left panel-body">Дата набуття чинності</div>
-                <div class="col-xs-2 pull-left panel-body">
-                    <input class="form-control" ng-model="fdata.actuality_date" type="date"
+                <div class="col-xs-2 pull-left panel-body high"><span>Дата набуття чинності</span></div>
+                <div class="col-xs-2 pull-left panel-body high">
+                    <input class="form-control" ng-model="fdata.actual_date" type="date"
+                           ng-change="fdata.actual_date = dateConvert(fdata.actual_date)"
                            placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31" required></div>
             </div>
         </div>
@@ -33,7 +37,7 @@
 
     <div class="col-xs-12 clearfix">
         <div class="panel panel-default">
-            <div class="panel-heading">Розробник регуляторного акта</div>
+            <div class="panel-heading">Розробник регуляторного акта{[{ fdata.developer }]}</div>
             <div class="panel-body developer">
                 <div >
                     <input type="text" ng-model="fdata.developer"
@@ -62,9 +66,8 @@
             <div class="panel-heading">Рік відстеження та параметри</div>
             <div class="panel-body">
                 <div class="col-xs-2 pull-left">
-                    <input type="text" ng-model="fdate.year" placeholder="Рік відстеження" uib-typeahead="year for year in years"
-                           class="form-control" typeahead-min-length="0" typeahead-focus-on-select="true"
-                           typeahead-editable="false">
+                    <input type="text" ng-model="fdata.trace_year"
+                           class="form-control"placeholder="Рік відстеження">
                 </div>
                 <div class="col-xs-1 pull-left heading">Базовий</div>
                 <switcher class="col-xs-1 pull-left" ng-model="fdata.base"
@@ -84,11 +87,12 @@
 
 
     <div class="clearfix">
-        <h3 class="col-xs-12">Базове відстеження</h3>
+        <h3 class="col-xs-12 track-header">Базове відстеження</h3>
         <div class="col-xs-6">
             <div class="panel panel-default clearfix">
                 <div class="panel-heading">Термін здійснення заходів з відстеження</div>
                 <div class="panel-body"><input class="form-control" ng-model="fdata.term_basic" type="date"
+                                               ng-change="fdata.term_basic = dateConvert(fdata.term_basic)"
                                                 placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31"></div>
             </div>
         </div>
@@ -107,6 +111,7 @@
             <div class="panel panel-default clearfix">
                 <div class="panel-heading">Дата підписання  звіту  про відстеження результативності регуляторного акта</div>
                 <div class="panel-body"><input  class="form-control" ng-model="fdata.sign_basic" type="date"
+                                                ng-change="fdata.sign_basic = dateConvert(fdata.sign_basic)"
                                                 placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31"></div>
             </div>
         </div>
@@ -114,6 +119,7 @@
             <div class="panel panel-default clearfix">
                 <div class="panel-heading">Дата оприлюденення  звіту  про відстеження результативності регуляторного акта</div>
                 <div class="panel-body"><input  class="form-control" ng-model="fdata.pub_basic" type="date"
+                                                ng-change="fdata.pub_basic = dateConvert(fdata.pub_basic)"
                                                 placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31"></div>
             </div>
         </div>
@@ -121,6 +127,7 @@
             <div class="panel panel-default clearfix">
                 <div class="panel-heading">Дата надання звіту  про відстеження результативності регуляторного акта до Держпідприємництва</div>
                 <div class="panel-body"><input  class="form-control" ng-model="fdata.gived_basic" type="date"
+                                                ng-change="fdata.gived_basic = dateConvert(fdata.gived_basic)"
                                                 placeholder="yyyy-MM-dd" min="1999-01-01" max="2113-12-31"></div>
             </div>
         </div>
