--- a/static/html/track/e_broken.html
+++ b/static/html/track/e_broken.html
@@ -1,10 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="col-md-12">
+    <h4 class="clearfix">Порушено</h4>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Строк виконання</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_period"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_period_c"
+                 on-save="saveData('broken_period_c',value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Підпис</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_sign"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_sign_c"
+                 on-save="saveData('broken_sign_c', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Оприлюднення</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_promo"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_promo_c"
+                 on-save="saveData('broken_promo_c', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Строк подання звіту</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_term_rep"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_term_rep_c"
+                 on-save="saveData('broken_term_rep_c', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Метод відстеження</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_track_meth"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_track_meth_c"
+                 on-save="saveData('broken_track_meth_c', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Дані та припущення</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_data_assump"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_data_assump_c"
+                 on-save="saveData('broken_data_assump_c', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Показники</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.broken_indexes"
+                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" inline-comment="track.pl.broken_indexes_c"
+                 on-save="saveData('broken_indexes_c', value)" on-cancel="log('CANCEL', value)"></div>
+        </div>
+    </div>
+    <div class="panel panel-default comment">
+        <div class=" panel-heading">Коментар</div>
+        <div class="panel-body" inline-comment="track.pl.broken_indexes_c"
+             on-save="saveData('broken_indexes_c', value)" on-cancel="log('CANCEL', value)"></div>
+    </div>
+</div>
