--- a/static/html/track/e_repeated.html
+++ b/static/html/track/e_repeated.html
@@ -3,75 +3,271 @@
     <div class="col-xs-6 pull-left switch">
         <div class="clearfix">
         <div class="panel panel-default pull-left">
-            <div class="panel-heading ">Висновок Комітету щодо відповідності звіту вимогам постанови КМУ від 11.03.04 р. №308</div>
-            <div class="pull-left panel-body" inline-edit="track.pl.concl_rep"
-                 on-save="saveData('concl_rep', value)" on-cancel="log('CANCEL', value)"></div>
+            <div class="panel-heading">Висновок Комітету щодо відповідності звіту вимогам постанови КМУ від 11.03.04 р. №308</div>
+            <div class="pull-left panel-body"
+                 inline-edit="track.pl.r_cnclsn"
+                 on-save="saveChanges('r_cnclsn', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
         </div>
         <div class="panel panel-default pull-left">
             <div class="panel-heading high">Порушено?</div>
             <div class="panel-body">
-                <switcher ng-model="track.pl.cr_bool"
-                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+                <switcher ng-model="track.pl.r_cnclsn_bool"
+                          true-value="'1'" true-label="Так"
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_cnclsn_bool', 'r', newValue)">
+                </switcher>
+            </div>
         </div>
         </div>
         <div class="clearfix">
             <div class="panel panel-default comment">
-                <div class=" panel-heading">Коментар</div>
-                <div class="panel-body" inline-comment="track.pl.concl_rep_comment"
-                     on-save="saveData('concl_rep_comment', value)" on-cancel="log('CANCEL', value)"></div>
+                <div class="panel-heading">Коментар</div>
+                <div class="panel-body"
+                     inline-comment="track.pl.r_cnclsn_comment"
+                     on-save="saveChanges('r_cnclsn_comment', 'r', value)"
+                     on-cancel="log('CANCEL', value)"></div>
             </div>
         </div>
     </div>
     <div class="col-xs-6 pull-left switch basic">
         <div class="clearfix">
         <div class="panel panel-default pull-left">
-            <div class="panel-heading">Результати відстеження результативності</div>
-            <div class="pull-left panel-body" inline-edit="track.pl.rslt_rep"
-                 on-save="saveData('rslt_rep', value)" on-cancel="log('CANCEL', value)"></div>
+            <div class="panel-heading high">Результати відстеження результативності</div>
+            <div class="pull-left panel-body"
+                 inline-edit="track.pl.r_result"
+                 on-save="saveChanges('r_result', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
         </div>
         <div class="panel panel-default pull-left">
-            <div class="panel-heading">Ефективне?</div>
+            <div class="panel-heading high">Ефективне?</div>
             <div class="panel-body">
-                <switcher ng-model="track.pl.rslt_rep_bool"
-                          true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher></div>
+                <switcher ng-model="track.pl.r_result_bool"
+                          true-value="'1'" true-label="Так"
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_result_bool', 'r', newValue)">
+                </switcher>
+            </div>
         </div>
         </div>
         <div class="clearfix">
             <div class="panel panel-default comment">
-                <div class=" panel-heading">Коментар</div>
-                <div class="panel-body" inline-comment="track.pl.rslt_rep_comment"
-                     on-save="saveData('rslt_rep_comment', value)" on-cancel="log('CANCEL', value)"></div>
+                <div class="panel-heading">Коментар</div>
+                <div class="panel-body"
+                     inline-comment="track.pl.r_result_comment"
+                     on-save="saveChanges('r_result_comment', 'r', value)"
+                     on-cancel="log('CANCEL', value)">
+                </div>
             </div>
         </div>
     </div>
     <div class="col-xs-6 pull-left">
         <div class="panel panel-default clearfix">
             <div class="panel-heading">Термін здійснення заходів з відстеження</div>
-            <div class="pull-left panel-body" inline-date="track.pl.termin_rep"
-                 on-save="saveData('term_rep', value)" on-cancel="log('CANCEL', value)"></div>
+            <div class="pull-left panel-body width-25 input-name">
+                <span>За законом:</span>
+            </div>
+            <div class="pull-left panel-body width-25" 
+                 inline-date="track.pl.r_termin_zakon"
+                 on-save="saveChanges('r_termin_zakon', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+            <div class="pull-left panel-body width-25 input-name">
+                <span>Фактичний:</span>
+            </div>
+            <div class="pull-left panel-body width-25" 
+                 inline-date="track.pl.r_termin_fact"
+                 on-save="saveChanges('r_termin_fact', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
         </div>
     </div>
-
     <div class="col-xs-6 pull-left">
         <div class="panel panel-default clearfix">
             <div class="panel-heading">Дата підписання  звіту  про відстеження результативності регуляторного акта</div>
-            <div class="pull-left panel-body" inline-date="track.pl.sign_rep"
-                 on-save="saveData('sign_rep', value)" on-cancel="log('CANCEL', value)"></div>
+            <div class="pull-left panel-body" 
+                 inline-date="track.pl.r_signed"
+                 on-save="saveChanges('r_signed', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
         </div>
     </div>
     <div class="col-xs-6 pull-left">
         <div class="panel panel-default clearfix">
-            <div class="panel-heading">Дата оприлюденення  звіту  про відстеження результативності регуляторного акта</div>
-            <div class="pull-left panel-body" inline-date="track.pl.pub_rep"
-                 on-save="saveData('pub_rep', value)" on-cancel="log('CANCEL', value)"></div>
+            <div class="panel-heading high">Дата оприлюденення  звіту  про відстеження результативності регуляторного акта</div>
+            <div class="pull-left panel-body" 
+                 inline-date="track.pl.r_publicated"
+                 on-save="saveChanges('r_publicated', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
         </div>
     </div>
     <div class="col-xs-6 pull-left">
         <div class="panel panel-default clearfix">
             <div class="panel-heading">Дата надання звіту  про відстеження результативності регуляторного акта до Держпідприємництва</div>
-            <div class="pull-left panel-body" inline-date="track.pl.gived_rep"
-                 on-save="saveData('gived_rep', value)" on-cancel="log('CANCEL', value)"></div>
+            <div class="pull-left panel-body" 
+                 inline-date="track.pl.r_gived"
+                 on-save="saveChanges('r_gived', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
         </div>
     </div>
+</div>
 
+<div class="col-md-12">
+    <h4 class="clearfix">Порушено</h4>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Строк виконання</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_period"
+                          true-value="'1'" true-label="Так" 
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_period', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_period_c"
+                 on-save="saveChanges('r_br_period_c', 'r', value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Підпис</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_sign"
+                          true-value="'1'" true-label="Так" 
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_sign', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_sign_c"
+                 on-save="saveChanges('r_br_sign_c', 'r',  value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Оприлюднення</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_promo"
+                          true-value="'1'" true-label="Так" 
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_promo', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_promo_c"
+                 on-save="saveChanges('r_br_promo_c', 'r',  value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Строк подання звіту</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_term_rep"
+                          true-value="'1'" true-label="Так" 
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_term_rep', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_term_rep_c"
+                 on-save="saveChanges('r_br_term_rep_c', 'r',  value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Метод відстеження</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_track_meth"
+                          true-value="'1'" true-label="Так" 
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_track_meth', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_track_meth_c"
+                 on-save="saveChanges('r_br_track_meth_c', 'r',  value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Дані та припущення</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_data_assump"
+                          true-value="'1'" true-label="Так"
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_data_assump', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_data_assump_c"
+                 on-save="saveChanges('r_br_data_assump_c', 'r',  value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="clearfix switch-reate">
+        <div class="panel panel-default pull-left high">
+            <div class="panel-heading ">Показники</div>
+            <div class="panel-body">
+                <switcher ng-model="track.pl.r_br_indexes"
+                          true-value="'1'" true-label="Так" 
+                          false-value="'0'" false-label="Ні"
+                          ng-change="saveChanges('r_br_indexes', 'r', newValue)">
+                </switcher>
+            </div>
+        </div>
+
+        <div class="panel panel-default comment">
+            <div class=" panel-heading">Коментар</div>
+            <div class="panel-body" 
+                 inline-comment="track.pl.r_br_indexes_c"
+                 on-save="saveChanges('r_br_indexes_c', 'r',  value)"
+                 on-cancel="log('CANCEL', value)">
+            </div>
+        </div>
+    </div>
+    <div class="panel panel-default comment">
+        <div class=" panel-heading">Коментар</div>
+        <div class="panel-body" 
+             inline-comment="track.pl.r_comment"
+             on-save="saveChanges('r_comment', 'r',  value)"
+             on-cancel="log('CANCEL', value)">
+        </div>
+    </div>
 </div>
