--- a/static/html/track/v_info.html
+++ b/static/html/track/v_info.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 clearfix">
     <div class="panel panel-default">
         <div class="panel-heading">Назва та реквізити регуляторного акта</div>
-        <div class="panel-body">{[{ track.pl.requisits }]}</div>
+        <div class="panel-body">{[{ track.pl.reg_name }]}</div>
     </div>
 </div>
 
